--- a/assets/stylesheets/desktop/page-header.scss
+++ b/assets/stylesheets/desktop/page-header.scss
@@ -176,14 +176,16 @@ header [data-click-outside] {
 }
 
 .d-header #site-logo.logo-big {
-  max-height: 62px;
   max-width: 180px;
+  max-height: unset;
   width: 100%;
+  height: 62px;
 }
 .d-header #site-logo.logo-small {
-  max-height: 62px;
   max-width:44px;
+  max-height: unset;
   width: 100%;
+  height: 62px;
 }
 
 
